Fix overflowing header image

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3317,6 +3317,7 @@ input, select, textarea {
 		max-width: 68em;
 		margin: 0 auto;
 		padding: 0 2.5em;
+		overflow: auto;
 	}
 
 		@media screen and (max-width: 736px) {
